--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   collection: ^1.18.0
   path: ^1.9.0
   synchronized: ^3.1.0+1
+  uuid: ^4.3.3
   # path: ^1.8.0
 
 dev_dependencies:
